# System-Programming-by-C

./: README.md  a.out  cmd_ps.c  debug  debug.c  manage_dir.c
backup/: a.out  manage_dir.c
custom_shell/: .manage_dir.c.swp  Makefile  cmd_cat.c  cmd_cd.c  cmd_chmod.c  cmd_cp.c  cmd_help.c  cmd_kill.c  cmd_ln.c  cmd_ls.c  cmd_mkdir.c  cmd_ps.c  cmd_ps2.c  cmd_rename.c  cmd_rm.c  cmd_rmdir.c  cmd_run.c  config.c  config.h  custom_header.h  main.c  path_utils.c  program
custom_shell/previous_code/: manage_dir.c
custom_ui/: Client  receive  receive_message.c
dir_manage_gtk/: meson.build  ui_cd.c  ui_link.c  ui_manage.c
dir_manage_ver2/: a.out
directory_management_new/: a.out  manage_dir.c
ipc_test/: Client.c  Listener  Listener.c  send  send_message.c
lecture/: fd  fd.c  mprotect  mprotect.c
test/: a.out  backend  backend.c  front.c
test_new/: backend.c  column.ui  communication.c  header.h  main.c  ui_list.c
